Data models import, export, and reset for 002
 - added line to index.js to set node_env to development if it is not set
 - fixed a small bug with the persistent notifications and used them on debug page from server side
 - added 002 files to manage export and import for 002
 - 002 import is somewhat smarter than 001, merging settings (except version), replacing user & clearing primary keys
 - added reset to models and migration, which does the down operation the same way that init does the up operation
 - import and reset clear session & redirect to login / signup
 - additional unit tests

--- a/core/server/views/debug.hbs
+++ b/core/server/views/debug.hbs
@@ -15,7 +15,6 @@
             <h2 class="title">General</h2>
         </header>
         <section class="content">
-            {{> flashes}}
             <form id="settings-export">
                 <fieldset>
                     <label>
@@ -31,7 +30,7 @@
                         <b>Import</b>
                         <input type="file" class="button-add" name="importfile"></input>
                         <input type="submit" class="button-save" value="Import"></input>
-                        <p>Import from another Ghost installation.</p>
+                        <p>Import from another Ghost installation. If you import a user, this will replace the current user & log you out.</p>
                     </label>
                 </fieldset>
             </form>
