--- a/core/server/views/partials/flashes.hbs
+++ b/core/server/views/partials/flashes.hbs
@@ -1,8 +1,10 @@
 {{#if messages}}
     {{#each messages}}
-        <section class="notification{{#if type}}-{{type}}{{/if}} notification-{{status}} js-notification">
-          {{message}}
-          <a class="close" href="#" data-id="{{id}}"><span class="hidden">Close</span></a>
-        </section>
+        <div class="js-bb-notification">
+            <section class="notification{{#if type}}-{{type}}{{/if}} notification-{{status}} js-notification">
+              {{message}}
+              <a class="close" href="#" data-id="{{id}}"><span class="hidden">Close</span></a>
+            </section>
+        </div>
     {{/each}}
 {{/if}}
