--- a/ghost/admin/tpl/settings/sidebar.hbs
+++ b/ghost/admin/tpl/settings/sidebar.hbs
@@ -5,5 +5,6 @@
     <ul>
         <li class="general"><a href="#general">General</a></li>
         <li class="publishing"><a href="#content">Content</a></li>
+        <li class="users"><a href="#user">User</a></li>
     </ul>
 </nav>
