Editable user profiles in settings screen
closes #276

 - settings screen now loads a model when a pane is requested, rather than when the whole screen is requested
 - added browse, read and edit methods and routes for users to the API
 - added user model & template to client and wired everything up.
 - provided default images for cover and profile picture

--- a/core/server/views/default.hbs
+++ b/core/server/views/default.hbs
@@ -64,6 +64,7 @@
 
         <!-- // require '/public/models/*' -->
         <script src="/public/models/post.js"></script>
+        <script src="/public/models/user.js"></script>
         <script src="/public/models/widget.js"></script>
         <script src="/public/models/settings.js"></script>
         <!-- // require '/public/views/*' -->
