Added image upload reusable plugin
issue #40 and issue #280

- Adds uploader jquery plugin
- includes settings for enabling/disabling upload progress bar
- adds routing for image uploads
- adds directories by year and month based on upload date
- Implements plugin on settings - general pane
- Implements plugin on editor
- adjusted general tab to save uploaded image src

TODO:
- Add error handling
- Storing information on editor
- Add events

--- a/core/client/assets/sass/layouts/editor.scss
+++ b/core/client/assets/sass/layouts/editor.scss
@@ -117,7 +117,7 @@
                 padding: 5px;
 
 			    &:hover {
-			        @include icon($i-question, '', $brown)
+			        @include icon($i-question, '', $brown);
 			    }
 			}
 
@@ -255,7 +255,6 @@
 			@include breakpoint($netbook) {padding-top: 20px;}
 			@include breakpoint($mobile) {padding: 15px;}
 		}
-
 	}
 
 	// Special case, when scrolling, add shadows to content headers.
@@ -331,11 +330,21 @@
 			text-align: center;
 		}
 	}
-
+    a {
+        &.image-edit {
+            width: 16px;
+            height: 16px;
+        }
+    }
 	img {
 		width: 100%;
 		height: auto;
 	}
+    // prevent uploaded image from being streched in editor
+    .pre-image-uploader img {
+        width: auto;
+    }
+
 }
 
 
