--- a/core/server/views/default.hbs
+++ b/core/server/views/default.hbs
@@ -39,12 +39,18 @@
 
         <script src="/shared/vendor/jquery/jquery.js"></script>
         <script src="/shared/vendor/jquery/jquery-ui-1.10.3.custom.min.js"></script>
+        <script src="/public/lib/jquery-utils.js"></script>
         <script src="/shared/vendor/underscore.js"></script>
         <script src="/shared/vendor/backbone/backbone.js"></script>
         <script src="/shared/vendor/handlebars/handlebars-runtime.js"></script>
         <script src="/shared/vendor/moment.js"></script>
 
         <script src="/public/vendor/icheck/jquery.icheck.min.js"></script>
+
+        <script src="/shared/vendor/jquery/jquery.ui.widget.js"></script>
+        <script src="/shared/vendor/jquery/jquery.iframe-transport.js"></script>
+        <script src="/shared/vendor/jquery/jquery.fileupload.js"></script>
+
         <script src="/public/vendor/codemirror/codemirror.js"></script>
         <script src="/public/vendor/codemirror/mode/markdown/markdown.js"></script>
         <script src="/public/vendor/showdown/showdown.js"></script>
@@ -54,8 +60,10 @@
         <script src="/public/vendor/to-title-case.js"></script>
         <script src="/public/vendor/packery.pkgd.min.js"></script>
 
-        <script src="/public/lib/jquery-utils.js"></script>
         <script src="/public/init.js"></script>
+
+        <script src="/public/assets/lib/uploader.js"></script>
+
         <script src="/public/tpl/hbs-tpl.js"></script>
         <script src="/public/toggle.js"></script>
         <script src="/public/markdown-actions.js"></script>
