--- a/ghost/admin/tpl/settings/general.hbs
+++ b/ghost/admin/tpl/settings/general.hbs
@@ -15,13 +15,19 @@
 
             <div class="form-group">
                 <label><strong>Blog Logo</strong></label>
-                <img src="/public/img/logo.png" alt="logo" height="38" width="381"/>
+                <section class="js-drop-zone">
+                    <img id="logo" class="js-upload-target" src="{{logo}}"{{#unless logo}} style="display: none"{{/unless}} alt="logo"/>
+                    <input data-url="upload" class="js-fileupload" type="file" name="uploadimage">
+                </section>
                 <p>Display a logo on your site in place of blog title</p>
             </div>
 
             <div class="form-group">
                 <label><strong>Blog Icon</strong></label>
-                <img src="/public/img/test-icon.png" alt="logo" height="38" width="38"/>
+                <section class="js-drop-zone">
+                <img id="icon" class="js-upload-target" src="{{icon}}"{{#unless icon}} style="display: none"{{/unless}} style="display: none" alt="icon"/>
+                    <input data-url="upload" class="js-fileupload" type="file" name="uploadimage">
+                </section>
                 <p>The icon for your blog, used in your browser tab and elsewhere</p>
             </div>
 
