--- a/core/client/tpl/modals/markdown.hbs
+++ b/core/client/tpl/modals/markdown.hbs
@@ -50,37 +50,37 @@
         <tr>
             <td>H1</td>
             <td># Heading</td>
-            <td>Alt + 1</td>
+            <td>Ctrl + Alt + 1</td>
         </tr>
         <tr>
             <td>H2</td>
             <td>## Heading</td>
-            <td>Alt + 2</td>
+            <td>Ctrl + Alt + 2</td>
         </tr>
         <tr>
             <td>H3</td>
             <td>### Heading</td>
-            <td>Alt + 3</td>
+            <td>Ctrl + Alt + 3</td>
         </tr>
         <tr>
             <td>H4</td>
             <td>#### Heading</td>
-            <td>Alt + 4</td>
+            <td>Ctrl + Alt + 4</td>
         </tr>
         <tr>
             <td>H5</td>
             <td>##### Heading</td>
-            <td>Alt + 5</td>
+            <td>Ctrl + Alt + 5</td>
         </tr>
         <tr>
             <td>H6</td>
             <td>###### Heading</td>
-            <td>Alt + 6</td>
+            <td>Ctrl + Alt + 6</td>
         </tr>
         <tr>
             <td>Select Word</td>
             <td></td>
-            <td>Ctrl + Option + W</td>
+            <td>Ctrl + Alt + W</td>
         </tr>
         <tr>
             <td>Uppercase</td>
@@ -95,7 +95,7 @@
         <tr>
             <td>Titlecase</td>
             <td></td>
-            <td>Ctrl + Option + Shift + U</td>
+            <td>Ctrl + Alt + Shift + U</td>
         </tr>
         <tr>
             <td>Insert Current Date</td>
