Improved mobile interactions
This is simply a commit which improves the mobile interactions. This does not fix UI problems on mobiles.

New interactions;

Menu
* Swipe right on header to show sidebar
* Swipe left on sidebar to hide

Content
* Tap / Swipe left on item to show preview
* Swipe right to show content list

Settings
* Tap / Swipe left on link to show settings
* Swipe right on settings to show links

--- a/core/client/assets/sass/layouts/dashboard.scss
+++ b/core/client/assets/sass/layouts/dashboard.scss
@@ -44,6 +44,10 @@
   background-color:#fff;
   box-shadow: $shadow;
 
+  @include breakpoint($mobile) {
+      width: 100%;
+  }
+
   .widget-content {
     @include box-sizing(border-box);
     margin-bottom: 40px;
