--- a/core/client/assets/sass/layouts/manage.scss
+++ b/core/client/assets/sass/layouts/manage.scss
@@ -19,6 +19,10 @@
         position: relative;
         height: 100%;
         width: 100%;
+
+        @include breakpoint($tablet) {
+            overflow-x: hidden;
+        }
     }
     .content-list {
         @include box-sizing(border-box);
@@ -32,9 +36,6 @@
         background: #fff;
         box-shadow: $shadow;
 
-        @include breakpoint(900px) {
-            width:300px;
-        }
         @include breakpoint($tablet) {
             width:auto;
             right:0;
@@ -182,9 +183,11 @@
         border-left:$lightbrown 2px solid;
         background: #fff;
         box-shadow: $shadow;
-        @include breakpoint(900px) {
+        @include breakpoint($tablet) {
             width: auto;
-            left: 300px;
+            left: 100%;
+            right: -100%;
+            margin-left: 15px;
         }
 
         .unfeatured {
