--- a/core/server/views/default.hbs
+++ b/core/server/views/default.hbs
@@ -11,7 +11,7 @@
         <meta name="author" content="">
         <meta name="HandheldFriendly" content="True">
         <meta name="MobileOptimized" content="320">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
         <meta name="apple-mobile-web-app-capable" content="yes" />
 
         <link rel="shortcut icon" href="/favicon.ico">
@@ -59,12 +59,14 @@
         <script src="/public/vendor/countable.js"></script>
         <script src="/public/vendor/to-title-case.js"></script>
         <script src="/public/vendor/packery.pkgd.min.js"></script>
+        <script src="/public/vendor/jquery.hammer.min.js"></script>
 
         <script src="/public/init.js"></script>
 
         <script src="/public/assets/lib/uploader.js"></script>
 
         <script src="/public/tpl/hbs-tpl.js"></script>
+        <script src="/public/mobile-interactions.js"></script>
         <script src="/public/toggle.js"></script>
         <script src="/public/markdown-actions.js"></script>
         <script src="/public/tagui.js"></script>
