Added functional user profile url to user dropdown menu.

--- a/core/server/views/partials/navbar.hbs
+++ b/core/server/views/partials/navbar.hbs
@@ -13,7 +13,7 @@
                     <span class="name">{{#if currentUser.name}}{{currentUser.name}}{{else}}Ghost{{/if}} v{{version}}</span>
                 </a>
                 <ul class="overlay">
-                    <li class="usermenu-profile"><a href="#">Your Profile</a></li>
+                    <li class="usermenu-profile"><a href="/ghost/settings/user">Your Profile</a></li>
                     <li class="divider"></li>
                     <li class="usermenu-help"><a href="#">Help / Support</a></li>
                     <li class="usermenu-shortcuts"><a href="#">Keyboard Shortcuts</a></li>
