Adjusted responsive image styles within Ghost editor to correctly size images within the preview pane.
Closed #442

--- a/core/client/assets/sass/layouts/editor.scss
+++ b/core/client/assets/sass/layouts/editor.scss
@@ -336,13 +336,10 @@
         }
     }
 	img {
-		width: 100%;
+		max-width: 100%;
 		height: auto;
+        margin: 0 auto;
 	}
-    // prevent uploaded image from being streched in editor
-    .pre-image-uploader img {
-        width: auto;
-    }
 
 }
 
