Fixed CodeMirror syntax highlighting bugs.
CodeMirror highlights markdown with fancy colours. This commit overrides those fuckers with black. Like my cold, dead heart.

--- a/core/client/assets/sass/layouts/editor.scss
+++ b/core/client/assets/sass/layouts/editor.scss
@@ -227,7 +227,9 @@
 		.cm-string,
 		.cm-link,
 		.cm-comment,
-		.cm-quote {color:#000;}
+		.cm-quote,
+        .cm-variable-2,
+        .cm-atom {color:#000;}
 
 	}
 
