--- a/ghost/admin/assets/sass/layouts/editor.scss
+++ b/ghost/admin/assets/sass/layouts/editor.scss
@@ -227,7 +227,9 @@
 		.cm-string,
 		.cm-link,
 		.cm-comment,
-		.cm-quote {color:#000;}
+		.cm-quote,
+        .cm-variable-2,
+        .cm-atom {color:#000;}
 
 	}
 
