More codemirror syntax highlighting fixes

--- a/core/client/assets/sass/layouts/editor.scss
+++ b/core/client/assets/sass/layouts/editor.scss
@@ -225,10 +225,13 @@
 		}
 
 		.cm-string,
-		.cm-link,
-		.cm-comment,
-		.cm-quote,
+        .cm-link,
+        .cm-comment,
+        .cm-quote,
         .cm-variable-2,
+        .cm-variable-3,
+        .cm-keyword,
+        .cm-number,
         .cm-atom {color:#000;}
 
 	}
