--- a/core/server/views/default.hbs
+++ b/core/server/views/default.hbs
@@ -52,9 +52,12 @@
         <script src="/shared/vendor/jquery/jquery.fileupload.js"></script>
 
         <script src="/public/vendor/codemirror/codemirror.js"></script>
+        <script src="/public/vendor/codemirror/addon/mode/overlay.js"></script>
         <script src="/public/vendor/codemirror/mode/markdown/markdown.js"></script>
+        <script src="/public/vendor/codemirror/mode/gfm/gfm.js"></script>
         <script src="/public/vendor/showdown/showdown.js"></script>
         <script src="/public/vendor/showdown/extensions/ghostdown.js"></script>
+        <script src="/shared/vendor/showdown/extensions/github.js"></script>
         <script src="/public/vendor/shortcuts.js"></script>
         <script src="/public/vendor/countable.js"></script>
         <script src="/public/vendor/to-title-case.js"></script>
