Removed flash, renamed file, unbroken logout / login request notifications
Closes #354
* Reintroduced the redirect functionality (not logged in, tries to go to `/settings/user/`, is sent to `/login/` with info notification, after login user is taken to `/settings/user/)
* Reintroduced the "Successfully logged out" message
* Added middleware to scrub passive notifications from `ghost.notifications` after one use basically mimicing client side passive notifications
* Removed flash from everywhere. Even from package.json.
* Renamed flashed.hbs to notifications.hbs, modified default.hbs accordingly
* Added function to parse GET variables on client side

--- a/core/server/views/default.hbs
+++ b/core/server/views/default.hbs
@@ -28,7 +28,7 @@
 
         <main role="main" id="main">
             <aside id="flashbar">
-                {{> flashes}}
+                {{> notifications}}
             </aside>
 
             {{{body}}}
