--- a/core/client/assets/sass/screen.scss
+++ b/core/client/assets/sass/screen.scss
@@ -7,26 +7,26 @@
    Modules - These styles are re-used in many areas, and are grouped by type.
    ========================================================================== */
 
-   @import "modules/mixins";
-   /* Sass variables like colours, font sizes, basic styles. */
+    @import "modules/mixins";
+    /* Sass variables like colours, font sizes, basic styles. */
 
-   @import "modules/normalize";
-   /* Browser cross compatibility normalisation*/
+    @import "modules/normalize";
+    /* Browser cross compatibility normalisation*/
 
-   @import "modules/typeplate";
-   /* All the styles controlling the typographic styles. */
+    @import "modules/typeplate";
+    /* All the styles controlling the typographic styles. */
 
-   @import "modules/icons";
-   /* All the styles controlling icons. */
+    @import "modules/icons";
+    /* All the styles controlling icons. */
 
-   @import "modules/animations";
-   /* Keyframe animations. */
+    @import "modules/animations";
+    /* Keyframe animations. */
 
-   @import "modules/global";
-   /* Global elements for the UI, like the header and footer. */
+    @import "modules/global";
+    /* Global elements for the UI, like the header and footer. */
 
-   @import "modules/forms";
-   /* All the styles controlling forms and form fields. */
+    @import "modules/forms";
+    /* All the styles controlling forms and form fields. */
 
 
 
@@ -34,20 +34,20 @@
    Layouts - Styles for specific admin screen layouts, grouped by screen.
    ========================================================================== */
 
-   @import "layouts/dashboard";
-   /* The default admin page, the dashboard. */
+    @import "layouts/dashboard";
+    /* The default admin page, the dashboard. */
 
-   @import "layouts/manage";
-   /* The manage posts screen. */
+    @import "layouts/manage";
+    /* The manage posts screen. */
 
-   @import "layouts/editor";
-   /* The write/edit post screen. */
+    @import "layouts/editor";
+    /* The write/edit post screen. */
 
-   @import "layouts/settings";
-   /* The settings screen. */
+    @import "layouts/settings";
+    /* The settings screen. */
 
-   @import "layouts/login";
-   /* The settings screen. */
+    @import "layouts/login";
+    /* The settings screen. */
 
-   @import "layouts/errors";
-   /* The errors screens. */
+    @import "layouts/errors";
+    /* The error screens. */
