--- a/ghost/admin/tpl/login.hbs
+++ b/ghost/admin/tpl/login.hbs
@@ -1,6 +1,6 @@
 <form id="login" method="post">
     <div class="email-wrap">
-        <input class="email" type="text" placeholder="Email Address" name="email">
+        <input class="email" type="email" autocapitalize="off" autocorrect="off" placeholder="Email Address" name="email">
     </div>
     <div class="password-wrap">
         <input class="password" type="password" placeholder="Password" name="password">
