--- a/ghost/admin/tpl/login.hbs
+++ b/ghost/admin/tpl/login.hbs
@@ -1,6 +1,6 @@
-<form id="login" method="post">
+<form id="login" method="post" novalidate="novalidate">
     <div class="email-wrap">
-        <input class="email" type="email" autocapitalize="off" autocorrect="off" placeholder="Email Address" name="email" novalidate>
+        <input class="email" type="email" placeholder="Email Address" name="email" autocapitalize="off" autocorrect="off">
     </div>
     <div class="password-wrap">
         <input class="password" type="password" placeholder="Password" name="password">
