--- a/ghost/admin/tpl/settings/user-profile.hbs
+++ b/ghost/admin/tpl/settings/user-profile.hbs
@@ -11,21 +11,21 @@
             <button class="button-change-cover">Change Cover</button>
         </figure>
     </header>
-    <form class="user-details-container">
+    <form class="user-details-container" novalidate="novalidate">
         <fieldset class="user-details-top">
             <figure class="user-avatar-image">
                 <img id="user-profile-picture" src="{{#if profile_picture}}{{profile_picture}}{{else}}/shared/img/default-user-profile-picture.jpg{{/if}}" title="{{full_name}}"/>
                 <button class="button-change-avatar">Update Avatar</button>
             </figure>
             <label>
-                <input type="text" value="{{full_name}}" id="user-name" placeholder="Joe Bloggs">
+                <input type="url" value="{{full_name}}" id="user-name" placeholder="Joe Bloggs" autocapitalize="off" autocorrect="off">
                 <p>Use your real name so people can recognise you.</p>
             </label>
         </fieldset>
         <fieldset class="user-details-bottom">
             <div class="form-group">
                 <label><strong>Email</strong></label>
-                <input type="text" value="{{email_address}}" id="user-email">
+                <input type="email" value="{{email_address}}" id="user-email" placeholder="Email Address" autocapitalize="off" autocorrect="off">
                 <p>Email will not be publicly displayed. <a class="highlight" href="#" >Learn more</a>.</p>
             </div>
 
