--- a/ghost/admin/tpl/signup.hbs
+++ b/ghost/admin/tpl/signup.hbs
@@ -1,6 +1,6 @@
-<form id="register" method="post">
+<form id="register" method="post" novalidate="novalidate">
     <div class="email-wrap">
-        <input class="email" type="text" placeholder="Email Address" name="email">
+        <input class="email" type="email" placeholder="Email Address" name="email" autocapitalize="off" autocorrect="off">
     </div>
     <div class="password-wrap">
         <input class="password" type="password" placeholder="Password" name="password">
