More iOS friendly form elements
Issue #465

- converted email fields throughout the site to be of type email
- converted the user website field to be of type url
- removed the browser validation by setting novalidate on the form, not the element

--- a/core/client/tpl/login.hbs
+++ b/core/client/tpl/login.hbs
@@ -1,6 +1,6 @@
-<form id="login" method="post">
+<form id="login" method="post" novalidate="novalidate">
     <div class="email-wrap">
-        <input class="email" type="email" autocapitalize="off" autocorrect="off" placeholder="Email Address" name="email" novalidate>
+        <input class="email" type="email" placeholder="Email Address" name="email" autocapitalize="off" autocorrect="off">
     </div>
     <div class="password-wrap">
         <input class="password" type="password" placeholder="Password" name="password">
