--- a/ghost/admin/tpl/modals/markdown.hbs
+++ b/ghost/admin/tpl/modals/markdown.hbs
@@ -34,7 +34,7 @@
         </tr>
         <tr>
             <td>Image</td>
-            <td>!image[image](http://)</td>
+            <td>![alt](http://)</td>
             <td>Ctrl + Shift + I</td>
         </tr>
         <tr>
