Dropping !image[] & other regex fixes
closes #452

- changed keyboard shortcut to insert ![].. not !image[]
- changed regex in ghostdown to only work for ![]
- added a further regex in ghostdown to properly match for URLs inside the parens

--- a/core/client/tpl/modals/markdown.hbs
+++ b/core/client/tpl/modals/markdown.hbs
@@ -34,7 +34,7 @@
         </tr>
         <tr>
             <td>Image</td>
-            <td>!image[image](http://)</td>
+            <td>![alt](http://)</td>
             <td>Ctrl + Shift + I</td>
         </tr>
         <tr>
