Adjusted word breaking rules in editor
Fixes #427
- Removed break-all, which was causing excessive behaviour detailed in the issue
- Removed -webkit- hyphen prefix, as both Chrome and Safari are ignoring it
- Firefox is currently the only browser respecting hyphens, the others simply break without hyphenating

--- a/core/client/assets/sass/layouts/editor.scss
+++ b/core/client/assets/sass/layouts/editor.scss
@@ -256,10 +256,8 @@
             padding: 60px 40px 40px 40px;
             overflow: auto;
 
-            // Breaking for long words in preview region
+            // Break long words to new line
             word-break: break-word;
-            word-break: break-all;
-            -webkit-hyphens: auto;
             hyphens: auto;
 
             // Tweak padding for smaller screens
