--- a/core/client/assets/sass/modules/global.scss
+++ b/core/client/assets/sass/modules/global.scss
@@ -71,6 +71,8 @@ body {
     color: $darkgrey;
     font-weight: 300;
     background: $lightbrown;
+    word-break: break-word;
+    hyphens: auto;
     @include breakpoint($mobile) { background: #fff; }
 }
 
