Bug Fix: Login form now maintains the right layout on reize

--- a/core/client/assets/sass/layouts/login.scss
+++ b/core/client/assets/sass/layouts/login.scss
@@ -19,8 +19,7 @@
     }
 
     main { 
-        top: 15px;
-        @include breakpoint($mobile) { top: 0; }
+        top: 0;
     }
 }//.ghost-login
 
